--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,7 +36,7 @@ include = [
 ]
 
 [tool.poetry.dependencies]
-python = ">=3.8,<3.13"
+python = ">=3.9,<3.13"
 
 # https://github.com/lepture/authlib/pull/662
 # fix authlib to use correct auth method for token introspection
@@ -44,13 +44,12 @@ python = ">=3.8,<3.13"
 # a fixed stable authlib release
 authlib = {git = "https://github.com/AdamWill/authlib.git", branch = "oauth2-fix-introspect-endpoint"}
 
-flask = "^2.2.5"
-flask-oidc = "^2.2.0"
-flask-session = ">=0.6.0"
+flask = "^3.1.0"
+flask-oidc = "^2.2.2"
+flask-session = ">=0.8.0"
 Flask-SQLAlchemy = "^3.1.1"
 Flask-Cors = "^5.0.0"
-Flask-Migrate = "^4.0.5"
-itsdangerous = {version = "==2.0.1", optional = true}
+Flask-Migrate = "^4.0.7"
 
 gssapi = "^1.8.3"
 python-ldap = "^3.4.3"
@@ -97,6 +96,7 @@ markupsafe = {version = "==2.1.5", optional = true}
 pydantic = "^2.9.2"
 Flask-Pydantic = "^0.12.0"
 flask-restx = "^1.3.0"
+flask-wtf = "^1.2.2"
 
 [tool.poetry.extras]
 test = [
